--- a/src/CharacterList/CharacterCard/CharacterCard.css
+++ b/src/CharacterList/CharacterCard/CharacterCard.css
@@ -3,7 +3,8 @@
   transition: 0.3s ease;
   font-weight: 100;
   color: rgb(100,175,250);
-  width: 190px;
+  max-width: 180px;
+  width: 100%;
 }
 
 .character-card div
