--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,33 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #000;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+.lf2-border-blue {
+  border-color: #5A77D8;
+}
+
+.lf2-bg-black {
+  background-color: #000;
+}
+
+.lf2-bg-blue {
+  background-color: #122565;
+}
+.lf2-bg-blue-dark {
+  background-color: #000C53;
+}
+
+.lf2-text-blue {
+  color: #3764FF;
+}
+.lf2-text-blue-light {
+  color: #5582FF;
 }
