--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -518,9 +518,9 @@ table {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1024) {
   .container {
-    max-width: 1024px;
+    max-width: 1024;
   }
 }
 
@@ -22942,7 +22942,7 @@ table {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1024) {
   .xl\:list-reset {
     list-style: none;
     padding: 0;
