--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -2,3 +2,16 @@
   bottom: 10%;
   right: 5%;
 }
+.video-responsive{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+}
+.video-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
