--- a/src/Downloads/Accordion/Accordion.css
+++ b/src/Downloads/Accordion/Accordion.css
@@ -8,21 +8,21 @@
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: #eee;
-  color: #444;
   cursor: pointer;
-  padding: 18px;
   display: flex;
   align-items: center;
-  border: none;
   outline: none;
-  transition: background-color 0.6s ease;
+  transition: 0.6s ease;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.accordion:hover,
 .accordion.active {
-  background-color: #ccc;
+  border-bottom: none;  
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.accordion:focus {
+  outline: none;
 }
 
 /* Style the accordion content title */
@@ -34,8 +34,8 @@
 
 /* Style the accordion chevron icon */
 .accordion__icon {
-  margin-left: auto;
   transition: transform 0.6s ease;
+  margin-right: 5px;
 }
 
 /* Style to rotate icon when state is active */
@@ -45,9 +45,8 @@
 
 /* Style the accordion content panel. Note: hidden by default */
 .accordion__content {
-  background-color: white;
   overflow: hidden;
-  transition: max-height 0.6s ease;
+  transition: 0.6s ease;
 }
 
 /* Style the accordion content text */
