--- a/src/Downloads/Downloads.css
+++ b/src/Downloads/Downloads.css
@@ -5,11 +5,12 @@
 .download-button {
   transition: 0.25s;
   background-color: #68d391;
-  padding: 7px 20px;
+  padding: 12px 25px;
   border-radius: 5px;
-  border: 2px solid #2f855a;
+  border: 1px solid #2f855a;
   color: white;
   font-weight: 600;
+  font-size: 20px;
   margin: 10px 0;
 }
 .download-button:hover
