--- a/src/Downloads/Accordion/Accordion.css
+++ b/src/Downloads/Accordion/Accordion.css
@@ -34,7 +34,7 @@
 
 /* Style the accordion chevron icon */
 .accordion__icon {
-  transition: transform 0.6s ease;
+  transition: transform 0.7s ease-in-out;
   margin-right: 10px;
 }
 
@@ -46,7 +46,7 @@
 /* Style the accordion content panel. Note: hidden by default */
 .accordion__content {
   overflow: hidden;
-  transition: 0.6s ease;
+  transition: 0.7s ease-in-out;
 }
 .accordion__content.active {
   margin-bottom: 1.25rem;
