--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -15,3 +15,54 @@
   width:100%;
   position:absolute;
 }
+
+.hero-logos .dbz-logo {
+  width: 45%;
+  margin-top: -100px;
+  margin-bottom: -100px;
+}
+.hero-logos .lf2-logo {
+  width: 55%;
+  margin-top: -100px;
+  margin-bottom: -100px;
+}
+.hero-logos .version {
+  margin-bottom: 50px;
+}
+
+@media (max-width: 992px) {
+  .hero-logos .dbz-logo {
+    margin-top: -100px;
+    margin-bottom: -140px;
+  }
+  .hero-logos .lf2-logo {
+    margin-top: -100px;
+    margin-bottom: -140px;
+  }
+  .hero-logos .version {
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-logos .dbz-logo {
+    width: 100%;
+  }
+  .hero-logos .lf2-logo {
+    width: 100%; 
+  }
+}
+
+@media (max-width: 576px) {
+  .hero-logos .dbz-logo {
+    margin-top: -100px;
+    margin-bottom: -125px;
+  }
+  .hero-logos .lf2-logo {
+    margin-top: -125px;
+    margin-bottom: -75px;
+  }
+  .hero-logos .version {
+    margin-bottom: 50px;
+  }
+}
