add faqs and update character list and profile and bio

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,9 @@ code {
 .lf2-bg-blue-dark {
   background-color: #000C53;
 }
+.lf2-bg-blue-light {
+  background-color: #314a9e;
+}
 
 .lf2-text-blue {
   color: #3764FF;
