--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -506,9 +506,15 @@ table {
   }
 }
 
-@media (min-width: 1024) {
+@media (min-width: 1024px) {
   .container {
-    max-width: 1024;
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
   }
 }
 
