--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -506,15 +506,9 @@ table {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1024) {
   .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1200px;
+    max-width: 1024;
   }
 }
 
