add new combo list on character profile page

--- a/src/Components/CharacterProfile/CharacterBio/CharacterBio.css
+++ b/src/Components/CharacterProfile/CharacterBio/CharacterBio.css
@@ -51,3 +51,10 @@ Race Labels
 .alien-race-label {
   background-color: #b7b7b7;
 }
+
+/*
+Release Labels
+*/
+.release-label {
+  background-color: gray;
+}
