updated some characters combos and added power levels for characters and release dates for characters and backgrounds

--- a/src/Components/CharacterProfile/ComboList/ComboList.css
+++ b/src/Components/CharacterProfile/ComboList/ComboList.css
@@ -70,8 +70,9 @@
   /* margin-bottom: 1.25rem; */
 }
 
-
-.sticky-bio {
-  position: sticky;
-  top: 110px;
+@media (min-width: 576px) {
+  .sticky-bio {
+    position: sticky;
+    top: 110px;
+  }
 }
