--- a/src/Components/CharacterProfile/CharacterBio/CharacterBio.css
+++ b/src/Components/CharacterProfile/CharacterBio/CharacterBio.css
@@ -58,3 +58,32 @@ Release Labels
 .release-label {
   background-color: gray;
 }
+
+#ss-aura-flash {
+  display: none;
+}
+
+.bio-ss-aura {
+  display: block !important;
+  position: absolute;
+  opacity: 1;
+  bottom: 15px;
+  left: -15px;
+  z-index: 2;
+}
+.bio-ss-aura-flash {
+  animation: fadeOut 0.35s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
