add chartjs for new stats and add new character super trunks and new moves for goku namek

--- a/src/Components/CharacterProfile/CharacterStats/StatBar/StatBar.css
+++ b/src/Components/CharacterProfile/CharacterStats/StatBar/StatBar.css
@@ -114,3 +114,21 @@
     --num: var(--power-level-value);
   }
 }
+
+@-webkit-keyframes counter {
+  0% {
+    --num: var(--power-level-start-value);
+  }
+  100% {
+    --num: var(--power-level-value);
+  }
+}
+
+@-moz-keyframes counter {
+  0% {
+    --num: var(--power-level-start-value);
+  }
+  100% {
+    --num: var(--power-level-value);
+  }
+}
