--- a/src/Components/CharacterProfile/CharacterStats/CharacterStats.css
+++ b/src/Components/CharacterProfile/CharacterStats/CharacterStats.css
@@ -17,6 +17,10 @@
   color: yellow;
   right: 5px;
 }
+.power-up-2ss {
+  color: yellow;
+  right: 30px;
+}
 .power-up-ultimate {
   color: white;
   right: 30px;
@@ -44,4 +48,40 @@
 .power-down-base {
   color: white;
   right: 5px;
+}
+
+.stat-circle1 {
+  border: 1px solid rgba(0,0,0,0);
+  /* background: linear-gradient(rgb(0, 144, 188), rgb(128, 134, 201), rgb(128, 134, 201), rgb(119, 178, 213)); */
+  background: linear-gradient(rgb(220, 220, 220), rgb(120, 120, 120));
+  width: 65%;
+  height: 65%;
+  border-radius: 100%;
+  position: absolute;
+  top: 20%;
+  left: 14%;
+  z-index: -1;
+  padding: 10px;
+}
+
+.stat-circle2 {
+  border: 2px solid black;
+  
+  /* background: radial-gradient(rgb(63, 69, 89) 15%, transparent 16%) 1px 1px,
+  radial-gradient(rgb(63, 69, 89) 15%, transparent 16%) 8px 8px,
+  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 8px;
+  background-color: rgb(17, 56, 72);
+  background-size:16px 16px; */
+
+  background: rgb(0,130,0);
+  background-image: linear-gradient(rgba(0, 0, 0, .5) 1px, transparent 1px), linear-gradient(90deg, rgba(0, 0, 0, .5) 1px, transparent 1px);
+  background-size: 35px 35px;
+
+  width: 90%;
+  height: 90%;
+  border-radius: 100%;
+  position: absolute;
+  margin: 10px;
+  z-index: -1;
 }
