fix build and update stats for mobile

--- a/src/Components/CharacterProfile/CharacterStats/CharacterStats.css
+++ b/src/Components/CharacterProfile/CharacterStats/CharacterStats.css
@@ -85,3 +85,22 @@
   margin: 10px;
   z-index: -1;
 }
+
+
+@media (max-width: 768px) {
+  .stats-radar {
+    display: none;
+  }
+  .stats-bars {
+    display: block;
+  }
+}
+
+@media (min-width: 768px) {
+  .stats-radar {
+    display: block;
+  }
+  .stats-bars {
+    display: none;
+  }
+}
