--- a/src/Components/CharacterProfile/CharacterStats/CharacterStats.css
+++ b/src/Components/CharacterProfile/CharacterStats/CharacterStats.css
@@ -1,3 +1,54 @@
+.arrow-up{
+  height: 20px;
+  width: 20px;
+  border: 1px solid black;
+  clip-path: polygon(0% 100%, 50% 0%, 100% 100%);
+  box-shadow: 0px 0px 5px 5px rgba(0,0,0,1);
+
+  position: absolute;
+  z-index: 5;
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 800;
+  opacity: 0.8;
+  transition: 0.2s ease-in-out;
+
+  top: 5px;
+}
+.arrow-up:hover {
+  font-size: 25px;
+  opacity: 1;
+  width: 25px;
+  height: 25px;
+  margin: -3px;
+}
+
+.arrow-down{
+  height: 20px;
+  width: 20px;
+  border: 1px solid black;
+  clip-path: polygon(0% 100%, 50% 0%, 100% 100%);
+  box-shadow: 0px 0px 5px 5px rgba(0,0,0,1);
+  transform: rotate(180deg);
+
+  position: absolute;
+  z-index: 5;
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 800;
+  opacity: 0.8;
+  transition: 0.2s ease-in-out;
+
+  bottom: 5px;
+}
+.arrow-down:hover {
+  font-size: 25px;
+  opacity: 1;
+  width: 25px;
+  height: 25px;
+  margin: -3px;
+}
+
 .bio-power-up {
   position: absolute;
   z-index: 5;
@@ -15,18 +66,22 @@
 }
 .power-up-ss {
   color: yellow;
+  background: yellow;
   right: 5px;
 }
 .power-up-2ss {
   color: yellow;
+  background: yellow;
   right: 30px;
 }
 .power-up-ultimate {
   color: white;
+  background: white;
   right: 30px;
 }
 .power-up-majin {
   color: pink;
+  background: pink;
   right: 30px;
 }
 
@@ -47,6 +102,7 @@
 }
 .power-down-base {
   color: white;
+  background: white;
   right: 5px;
 }
 
