--- a/src/Components/CharacterList/CharacterCard/CharacterCard.css
+++ b/src/Components/CharacterList/CharacterCard/CharacterCard.css
@@ -3,16 +3,29 @@
   transition: 0.3s ease;
   font-weight: 100;
   max-width: 175px;
+  height: 196px;
   width: 100%;
   color: white;
 }
 
-.character-card div
+.character-card .card-text
 {
   background-color: black;
   margin-top: -3px;
-  position: relative;
+  position: absolute;
+  left: 0;
+  bottom: 0;
   z-index: 2;
+  width: 100%;
+  font-size: 20px;
+}
+.card-text p {
+  margin-left: 0;
+  margin-right: -30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .character-card:hover
@@ -26,7 +39,44 @@
   transition: 0.3s ease;
 }
 
-.character-card:hover img {
+
+/* .character-card .anime-face:hover  {
   transform: scale(1.1);
-  opacity: 0.9;
+  opacity: 0.0;
+} */
+.anime-face:hover {
+  transform: scale(1.1);
+  opacity: 0.0;
+}
+
+.pixel-face {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 175px;
+  z-index: 1;
+  opacity: 0;
+  image-rendering: pixelated;
+  transform: translateY(-100%);
+}
+
+.character-card:hover .anime-face {
+  transition: 0.5s ease;
+  opacity: 0;
+  transform: translateY(100%);
+}
+.character-card:hover .pixel-face {
+  transition: 0.5s ease;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.card-text {
+  opacity: 1;
+  transition: 0.5s ease;
+  height: 66px;
+}
+.character-card:hover .card-text {
+  opacity: 0;
+  transform: translateY(100%);
 }
